test RQ6 completos